<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/heading"
            android:elevation="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="Dayak"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/image_heading"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:src="@drawable/dayak"
            android:scaleType="centerCrop"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_dayak"
            android:lineHeight="24dp"
            android:textSize="18sp"
            android:paddingHorizontal="16dp"
            android:textColor="@color/black"
            android:justificationMode="inter_word"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/pakaian_adat"
            android:elevation="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="Pakaian Adat"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/image_pakaian"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:scaleType="center"
            android:src="@drawable/pakaian_tradisional_dayak"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/detail_pakaian_adat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pakaian_tradisional"
            android:lineHeight="24dp"
            android:textSize="18sp"
            android:paddingHorizontal="16dp"
            android:textColor="@color/black"
            android:justificationMode="inter_word"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/senjata"
            android:elevation="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="Senjata Tradisional"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/image_senjata_tradisional"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:src="@drawable/pakaian_tradisional_dayak"
            android:scaleType="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/detail_senjata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/senjata_tradisional"
            android:lineHeight="24dp"
            android:textSize="18sp"
            android:paddingHorizontal="16dp"
            android:textColor="@color/black"
            android:justificationMode="inter_word"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/rumah_adat"
            android:elevation="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="Rumah Adat"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/image_rumah_adat"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:src="@drawable/rumah_adat_dayak"
            android:scaleType="centerCrop"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/detail_rumah_adat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rumah_adat"
            android:lineHeight="24dp"
            android:textSize="18sp"
            android:paddingHorizontal="16dp"
            android:textColor="@color/black"
            android:justificationMode="inter_word"
            android:layout_marginBottom="16dp"/>
    </LinearLayout>
</ScrollView>